--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
+    "@mathjax/src": "^4.1.0",
     "@vuepress/bundler-vite": "2.0.0-rc.26",
+    "katex": "^0.16.28",
     "sass-embedded": "^1.97.1",
     "vue": "^3.5.26",
     "vuepress": "2.0.0-rc.26",
